--- a/index.html
+++ b/index.html
@@ -2,87 +2,94 @@
 <meta charset="UTF-8">
 <html>
 <head>
-	<title>Основы построения HTML-документов и подготовка изображений для Web</title>
+	<title>Каскадные таблицы стилей</title>
+	<style type="text/css">
+.box {
+  background: #b7c3c9;
+  color: #ffffff;
+  display: table;
+  padding: 10px;
+  margin: 1em auto;
+  height: 500px;
+}
+p {
+  margin: 1em 0;
+  padding: 0;
+  display: inline-flex;
+}
+input[type="checkbox"] {
+  visibility: hidden;
+  display: inline-flex;
+  position: absolute;
+}
+label {
+  cursor: pointer;
+}
+input[type="checkbox"] + label:before {
+  border: 1px solid #333;
+  content: "\00a0";
+  display: inline-block;
+  height: 16px;
+  margin: 0 .25em 0 0;
+  padding: 0;
+  vertical-align: top;
+  width: 30px;
+  height: 30px;
+}
+input[type="checkbox"]:checked + label:before {
+  background: #89ff79;
+  color: #fffe9b;
+  text-align: center;
+}
+input[type="checkbox"]:checked + label:after {
+  font-weight: bold;
+}
+
+input[type="checkbox"]:focus + label::before {
+    outline: rgb(59, 153, 252) auto 5px;
+}
+	</style>
 </head>
 <body>
-<div style="margin-left: 45%"><h1>I hate frontend!</h1></div>
-<h2 id="contents">Оглавление</h2>
-    <ol>
-      <li><a href="#text">Оформленный текст</a></li>
-      <li><a href="#spisok">Список</a></li>
-      <li><a href="#table">Таблица</a></li>
-      <li><a href="#forma">Форма</a></li>
-    </ol>
-<div id="text" style="margin-top: 200px; margin-left: 30px">
-	Для любого <i>натурального</i> числа <b>n>2</b> уравнение a<sup>n</sup>+b<sup>n</sup>=c<sup>n</sup> <b>не имеет решений</b> при целых ненулевых числах a, b, c.
-</div>
-<ul id="spisok" style="margin-top: 200px;">
-	<li>Универ
-		<ul>
-			<li>Факультет
-				<ul>
-					<li>Специальность</li>
-					<li>Специальность</li>
-					<li>Специальность</li>
-				</ul>
-			</li>
-			<li>Факультет
-				<ul>
-					<li>Специальность</li>
-					<li>Специальность</li>
-					<li>Специальность</li>
-				</ul>
-			</li>
-			<li>Факультет
-				<ul>
-					<li>Специальность</li>
-					<li>Специальность</li>
-					<li>Специальность</li>
-				</ul>
-			</li>
-		</ul>
-	</li>
-</ul>
-<div id="table" style="margin-top: 200px; border: outset 20px; margin-left: 30px; display: table;">
-	<table border="1px solid gray" style="border-collapse: collapse;">
-		<tr>
-			<th>Currency pair</th>
-			<th>Quotation</th>
-		</tr>
-		<tr>
-			<td>BITBON/USD</td>
-			<td>6,32350</td>
-		</tr>
-		<tr>
-			<td>BITBON/EUR</td>
-			<td>5,68814</td>
-		</tr>
-		<tr>
-			<td>BITBON/BTC</td>
-			<td>0,00089</td>
-		</tr>
-		<tr>
-			<td>BITBON/ETH</td>
-			<td>0,05003</td>
-		</tr>
-		<tr>
-			<td>BITBON/LTC</td>
-			<td>0,15900</td>
-		</tr>
-	</table>
-</div>
-<div id="forma" style="margin-top: 200px; margin-left: 40%">
-	<form style="display: inline;">
-		<h2 style="margin-left: 5%">
-			<i>Форма голосования</i>
-		</h2>
-		<div>
-			<p>Меня зовут 
-				<input type="text" name="name" style="display: inline;">, и я 
-				<input type="button" name="btn1" value="Голосую!">
-			</p>
-		</div>
-	</form>
+<div class="content">
+  <div class="box">
+    <p style="position: absolute; top: 0; left: 0; bottom: 0; right: 0;">
+      <input type="checkbox" id="c1" name="cb">
+      <label for="c1"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c2" name="cb">
+      <label for="c2"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c3" name="cb">
+      <label for="c3"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c4" name="cb">
+      <label for="c4"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c5" name="cb">
+      <label for="c5"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c6" name="cb">
+      <label for="c6"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c7" name="cb">
+      <label for="c7"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c8" name="cb">
+      <label for="c8"></label>
+    </p>
+    <p>
+      <input type="checkbox" id="c9" name="cb">
+      <label for="c9"></label>
+    </p>
+  </div>
 </div>
 </body>
 </html>
